--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,5 +1,38 @@
 ---
 de:
+  home: "Startseite"
+  about: "Über"
+  menu: "Menü"
+  reservation: "Reservierung"
+  catering: "Gastronomie"
+  news: "Nachrichten"
+  contact: "Kontakt"
+  go_to_the_website: "Besuchen Sie die Website"
+  cart: "Wagen"
+  your_cart: "Ihr warenkorb"
+  view_cart: "Zum warenkorb"
+  welcome_to: "willkommen zu"
+  all_right_reserved: "Alle Rechte vorbehalten"
+  design_by: "Design von"
+  see_menu: "SIEHE MENÜ"
+  add_to_cart: "Add to Cart"
+  find_us_here: "Finden Sie uns"
+  your_message: "Deine nachricht"
+  your_name: "Deine nachricht"
+  your_email: "Deine E-Mail"
+  send_message: "Nachricht senden"
+  contact_us: "KONTAKTIERE UNS"
+  see_location_on_map: "AUFAHRTSPLAN ZEIGEN"
+  here: "hier"
+  see: "Sehen"
+  date_trans: "Datum"
+  time_trans: "Zeit"
+  note: "Notiz"
+  your_note: "Ihre Anmerkung"
+  customer_name: "Kundenname"
+  telephone: "Telefon"
+  email: "Email"
+  send_reservation: "RESERVIERUNG SENDEN"
   activerecord:
     errors:
       messages:
