--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,38 @@
 ---
 en:
+  home: "Home"
+  about: "About"
+  menu: "Menu"
+  reservation: "Reservation"
+  catering: "Catering"
+  news: "News"
+  contact: "Contact"
+  go_to_the_website: "GO TO THE WEBSITE"
+  cart: "Cart"
+  your_cart: "Your cart"
+  view_cart: "View cart"
+  welcome_to: "Welcome to"
+  all_right_reserved: "All Right Reserved"
+  design_by: "Design by"
+  see_menu: "SEE MENU"
+  add_to_cart: "Add to Cart"
+  find_us_here: "Find Us Here"
+  your_message: "Your message"
+  your_name: "Your name"
+  your_email: "Your email"
+  send_message: "Send message"
+  contact_us: "CONTACT US"
+  see_location_on_map: "SEE LOCATION ON MAP"
+  here: "here"
+  see: "See"
+  date_trans: "Date"
+  time_trans: "Time"
+  note: "Note"
+  your_note: "Your note"
+  customer_name: "Customer Name"
+  telephone: "Telephone"
+  email: "Email"
+  send_reservation: "SEND RESERVATION"
   activerecord:
     errors:
       messages:
