--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
   telephone: "Telephone"
   email: "Email"
   send_reservation: "SEND RESERVATION"
+  about_content_3: "WE MAKE ALSO OTHER MEAL"
   about_content_1: "In Viet Nam, Phở Bò is served on the road, in restaurant, anywhere; we can eat at breakfast, lunch, and diner, the preparation for this plat is very long time with many different ingredients, the different of each kind of Pho is the kind how you use the ingredients."
   about_content_2: "The components are: Clear beef broth with wide noodles, beef, onion, Vietnamese herbs, the sprouting seeds of mung bean."
   activerecord:
