update open and close times

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,9 @@ en:
   customer_name: "Customer Name"
   telephone: "Telephone"
   email: "Email"
+  monday_to_friday: "Mon to Fri"
+  saturday: "Sat"
+  sunday: "Sun"
   send_reservation: "SEND RESERVATION"
   about_content_3: "WE MAKE ALSO OTHER MEAL"
   about_content_1: "In Viet Nam, Phở Bò is served on the road, in restaurant, anywhere; we can eat at breakfast, lunch, and diner, the preparation for this plat is very long time with many different ingredients, the different of each kind of Pho is the kind how you use the ingredients."
