--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -35,6 +35,7 @@ de:
   note: "Notiz"
   your_note: "Ihre Anmerkung"
   customer_name: "Kundenname"
+  customer_number: "Wie viele Personen"
   telephone: "Telefon"
   email: "Email"
   monday_to_friday: "Mon bis Fre"
