--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
   note: "Note"
   your_note: "Your note"
   customer_name: "Customer Name"
+  customer_number: "How many person"
   telephone: "Telephone"
   email: "Email"
   monday_to_friday: "Mon to Fri"
