--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,5 +1,6 @@
 ---
 de:
+  address_val: '3. Stock, Bahnstrasse 60, 8105, Regensdorf'
   mon_fri: "Montag - Freitag"
   sat: "Samstag"
   sun: "Sonntag"
