--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,6 @@
 ---
 en:
+  address_val: '3rd Floor, Bahnstrasse 60, 8105, Regensdorf'
   mon_fri: "Monday - Friday"
   sat: "Saturday"
   sun: "Sunday"
